@@ -1,5 +1,8 @@
 2009-04-07  Akira TAGOH  <tagoh@redhat.com>
 
+	* backends/xim/proxy.c (_weak_notify_conn_cb): avoid a segfault related
+	to reconnection.
+
 	* data/xinput.sh.in.in: export IMSETTINGS_MODULE.
 
 2009-04-06  Akira TAGOH  <tagoh@redhat.com>
